bump and test new rc of resource-server